--- a/roles/virtualbox/tasks/main.yml
+++ b/roles/virtualbox/tasks/main.yml
@@ -8,11 +8,10 @@
     repo_facts:
       - repo: "deb https://download.virtualbox.org/virtualbox/debian {{ ubuntu_codename }} contrib"
 
-- import_tasks: "{{ helpers }}/package_apt.yml"
+- import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
-    package_apt_facts:
-      install:
-        - "virtualbox-6.0"
+    package_apt_add_facts:
+      - "virtualbox-6.0"
 
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
