--- a/roles/audacity/tasks/main.yml
+++ b/roles/audacity/tasks/main.yml
@@ -3,11 +3,10 @@
     repo_facts:
       - repo: "ppa:ubuntuhandbook1/audacity"
 
-- import_tasks: "{{ helpers }}/package_apt.yml"
+- import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
-    package_apt_facts:
-      install:
-        - "audacity"
+    package_apt_add_facts:
+      - "audacity"
 
 - import_tasks: "{{ helpers }}/copy.yml"
   vars:
