--- a/roles/easytag/tasks/main.yml
+++ b/roles/easytag/tasks/main.yml
@@ -1,8 +1,7 @@
-- import_tasks: "{{ helpers }}/package_apt.yml"
+- import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
-    package_apt_facts:
-      install:
-        - "easytag"
+    package_apt_add_facts:
+      - "easytag"
 
 - import_tasks: "{{ helpers }}/dconf.yml"
   vars:
