--- a/roles/redshift/tasks/main.yml
+++ b/roles/redshift/tasks/main.yml
@@ -1,8 +1,7 @@
-- import_tasks: "{{ helpers }}/package_apt.yml"
+- import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
-    package_apt_facts:
-      install:
-        - "redshift-gtk"
+    package_apt_add_facts:
+      - "redshift-gtk"
 
 - import_tasks: "{{ helpers }}/copy.yml"
   vars:
