--- a/roles/syncthing/tasks/main.yml
+++ b/roles/syncthing/tasks/main.yml
@@ -9,11 +9,10 @@
       - repo: "deb https://apt.syncthing.net/ syncthing stable"
         filename: "syncthing"
 
-- import_tasks: "{{ helpers }}/package_apt.yml"
+- import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
-    package_apt_facts:
-      install:
-        - "syncthing"
+    package_apt_add_facts:
+      - "syncthing"
 
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
