--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -1,8 +1,7 @@
-- import_tasks: "{{ helpers }}/package_apt.yml"
+- import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
-    package_apt_facts:
-      install:
-        - "transmission-gtk"
+    package_apt_add_facts:
+      - "transmission-gtk"
 
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
