--- a/roles/zeal/tasks/main.yml
+++ b/roles/zeal/tasks/main.yml
@@ -3,11 +3,10 @@
     repo_facts:
       - repo: "ppa:zeal-developers/ppa"
 
-- import_tasks: "{{ helpers }}/package_apt.yml"
+- import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
-    package_apt_facts:
-      install:
-        - "zeal"
+    package_apt_add_facts:
+      - "zeal"
 
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
