fix(firefox): remove the profile selection window at the first launch

--- a/roles/firefox/templates/profiles.ini
+++ b/roles/firefox/templates/profiles.ini
@@ -2,10 +2,12 @@
 Default={{ firefox_profile_name }}
 Locked=1
 
-[General]
-StartWithLastProfile=1
-
 [Profile0]
 Name={{ firefox_profile_name }}
 IsRelative=1
 Path={{ firefox_profile_name }}
+Default=1
+
+[General]
+StartWithLastProfile=1
+Version=2
