--- a/roles/rsnapshot/tasks/main.yml
+++ b/roles/rsnapshot/tasks/main.yml
@@ -15,9 +15,9 @@
           - "{{ user_storage }}/dev/"
           - "{{ user_storage }}/gym/"
           - "{{ user_storage }}/music/"
+          - "{{ user_storage }}/notes/"
           - "{{ user_storage }}/org/"
           - "{{ user_storage }}/picture/"
-          - "{{ user_storage }}/privacy/"
           - "{{ user_storage }}/sync/"
           - "{{ user_storage }}/video/"
   tags: "template_rsnapshot"
