--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -42,3 +42,5 @@ librefox_config:
     value: "15"
   - key: 'lockPref("accessibility.force_disabled"'
     value: "0"
+  - key: 'lockPref("devtools.devices.url"'
+    value: "'https://code.cdn.mozilla.net/devices/devices.json'"
