refactor(svgo): enable removeDimensions option

--- a/roles/svgo/files/.svgo.yml
+++ b/roles/svgo/files/.svgo.yml
@@ -28,7 +28,7 @@ plugins:
         - "stroke"
   - removeComments: true
   - removeDesc: true
-  - removeDimensions: false
+  - removeDimensions: true
   - removeDoctype: true
   - removeEditorsNSData: true
   - removeEmptyAttrs: true
@@ -52,7 +52,3 @@ plugins:
   - removeXMLProcInst: true
   - reusePaths: false
   - sortAttrs: true
-  - addAttributesToSVGElement:
-      attributes:
-        - width: 1em
-          height: 1em
