--- a/vars.yml
+++ b/vars.yml
@@ -8,5 +8,5 @@ user_font_monospace: "Iosevka Term SS08"
 user_font_serif: "Roboto Slab"
 user_font: "Iosevka SS08"
 user_home: '{{ "$HOME" | expandvars }}'
-user_storage_ext: "/media/{{ ansible_user_id }}/12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10"
+user_storage_ext: "{{ user_home }}/storage_ext"
 user_storage: "{{ user_home }}/storage"
