fix(vscodium): replace deleted extension
https://github.com/stylelint/stylelint/pull/4438

--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -6,8 +6,8 @@ vscodium_extensions:
   - "dsznajder.es7-react-js-snippets"
   - "editorconfig.editorconfig"
   - "esbenp.prettier-vscode"
+  - "hex-ci.stylelint-plus"
   - "mgmcdermott.vscode-language-babel"
   - "ms-python.python"
-  - "shinnn.stylelint"
   - "streetsidesoftware.code-spell-checker"
   - "tomoki1207.selectline-statusbar"
