--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -44,6 +44,7 @@
       entry_name: "emacs26"
       type:
         - "application/org"
+        - "application/pgp-encrypted"
         - "text/x-emacs-lisp"
   tags: "mime"
 
