refactor(vscodium): replace stylelint extension with extension from stylelint community

--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -5,8 +5,8 @@ vscodium_extensions:
   - "dracula-theme.theme-dracula"
   - "dsznajder.es7-react-js-snippets"
   - "editorconfig.editorconfig"
-  - "hex-ci.stylelint-plus"
   - "mgmcdermott.vscode-language-babel"
   - "ms-python.python"
   - "streetsidesoftware.code-spell-checker"
+  - "thibaudcolas.stylelint"
   - "tomoki1207.selectline-statusbar"
