--- a/roles/cinnamon/defaults/main.yml
+++ b/roles/cinnamon/defaults/main.yml
@@ -136,6 +136,8 @@ cinnamon_settings:
     value: "['1:30']"
   - key: "/org/cinnamon/panel-zone-icon-sizes"
     value: '''[{"panelId": 1, "left": 0, "center": 0, "right": 0}]'''
+  - key: "/org/cinnamon/panel-zone-symbolic-icon-sizes"
+    value: '''[{"panelId": 1, "left": 16, "center": 16, "right": 16}]'''
   - key: "/org/cinnamon/enabled-applets"
     value: |-
       [
