refactor(common): delete network-manager-config-connectivity-ubuntu

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -20,6 +20,7 @@
       - "mint-backgrounds-*"
       - "mintreport"
       - "mintwelcome"
+      - "network-manager-config-connectivity-ubuntu"
 
 - import_tasks: "{{ helpers }}/mime.yml"
   vars:
