fix(helpers/copy): add correct path to the helper

--- a/helpers/copy.yml
+++ b/helpers/copy.yml
@@ -1,5 +1,5 @@
 - &directory
-  include_tasks: "{{ playbook_dir }}/helpers/dir_create.yml"
+  include_tasks: "{{ helpers }}/dir_create.yml"
   vars:
     dir_create_facts:
       - path:
