chore(ansible config): suppress duplicate dict key warning

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 ansible_managed = "- DO NOT EDIT - see template: {file}"
 callback_whitelist = profile_roles, profile_tasks, timer
+duplicate_dict_key = True
 inventory = hosts.yml
 log_path = ~/.ansible/ansible.log
 nocows = True
