--- a/roles/rsnapshot/tasks/main.yml
+++ b/roles/rsnapshot/tasks/main.yml
@@ -16,7 +16,7 @@
           - "{{ user_storage }}/gym/"
           - "{{ user_storage }}/laptop/"
           - "{{ user_storage }}/music/"
-          - "{{ user_storage }}/notes/"
+          - "{{ user_storage }}/note/"
           - "{{ user_storage }}/org/"
           - "{{ user_storage }}/picture/"
           - "{{ user_storage }}/sync/"
