--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -1,3 +1,5 @@
+vscodium_config_path: "{{ user_config }}/VSCodium/User"
+
 vscodium_extensions:
   - "coenraads.bracket-pair-colorizer"
   - "dbaeumer.vscode-eslint"
