fix(bluetooth): disable the tray icon

--- a/roles/bluetooth/tasks/main.yml
+++ b/roles/bluetooth/tasks/main.yml
@@ -3,6 +3,8 @@
     dconf_facts:
       - key: "/org/blueberry/obex-enabled"
         value: "false"
+      - key: "/org/blueberry/tray-enabled"
+        value: "false"
   tags: "dconf_bluetooth"
 
 - name: set alias
